RESOLVED FIXED117960
Don't crash if renderName() is called on a renderer with no style
https://bugs.webkit.org/show_bug.cgi?id=117960
Summary Don't crash if renderName() is called on a renderer with no style
Simon Fraser (smfr)
Reported 2013-06-24 16:37:35 PDT
Don't crash if renderName() is called on a renderer with no style
Attachments
Patch (2.90 KB, patch)
2013-06-24 16:38 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2013-06-24 16:38:50 PDT
Dave Hyatt
Comment 2 2013-06-24 18:02:33 PDT
Comment on attachment 205343 [details] Patch r=me
Simon Fraser (smfr)
Comment 3 2013-06-24 18:29:13 PDT
Note You need to log in before you can comment on or make changes to this bug.