Don't crash if renderName() is called on a renderer with no style https://bugs.webkit.org/show_bug.cgi?id=117960

Reviewed by Dave Hyatt.

Calling renderName() at the top of RenderObject::willChangeStyle() when
adding debug logging would often crash because various functions called
from renderName() assume style is non-null. Fix this.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::renderName):
* rendering/RenderInline.cpp:
(WebCore::RenderInline::renderName):

Canonical link: https://commits.webkit.org/136093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151946 268f45cc-cd09-0410-ab3c-d52691b4dbfc